--- a/ComandoRadioElectrico/ComandoRadioElectrico.Core1/ComandoRadioElectrico.Core.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.Core1/ComandoRadioElectrico.Core.csproj
@@ -42,6 +42,10 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ScriptBaseDeDatos\ComandoRadioElectrico.sql" />
+    <Content Include="ScriptBaseDeDatos\InsertarDatosComandoRadioElectrico.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
