--- a/ComandoRadioElectrico/ComandoRadioElectrico.Core1/ComandoRadioElectrico.Core.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.Core1/ComandoRadioElectrico.Core.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4">
+      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
     </Reference>
@@ -49,21 +55,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Utils\AutoMapperConfig.cs" />
+    <Compile Include="NHibernate\Model\Partner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterImplementation.cs" />
+    <Compile Include="DTO\DeletedEntityDTO.cs" />
+    <Compile Include="Services\Aplication\Interface\IPartnerManagementService.cs" />
+    <Compile Include="DTO\PartnerDTO.cs" />
+    <Compile Include="Services\Aplication\Implementation\PartnerManagementService.cs" />
+    <Compile Include="Services\Business\Implementation\CRUDBaseService.cs" />
+    <Compile Include="Services\Business\Interface\ICRUDBase.cs" />
+    <Compile Include="Services\Business\Interface\IPartnerService.cs" />
+    <Compile Include="Services\Business\Implementation\PartnerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="NHibernate\Model\" />
     <Folder Include="NHibernate\NHConfig\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NHibernate\Hibernate.cfg.xml" />
+    <Content Include="NHibernate\Hibernate.cfg.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
