--- a/ComandoRadioElectrico/ComandoRadioElectrico.Core/ComandoRadioElectrico.Core.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.Core/ComandoRadioElectrico.Core.csproj
@@ -56,15 +56,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Utils\AutoMapperConfig.cs" />
     <Compile Include="NHibernate\Model\Partner.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Utils\AutoMapperConfig.cs" />
     <Compile Include="NH.cs" />
     <Compile Include="NHibernate\Model\MoveType.cs" />
     <Compile Include="NHibernate\Model\AccountType.cs" />
     <Compile Include="NHibernate\Model\DailyMove.cs" />
     <Compile Include="NHibernate\Model\AccountantAccount.cs" />
-    <Compile Include="NHibernate\Model\Partner.cs" />
     <Compile Include="NHibernate\Model\Quota.cs" />
     <Compile Include="NHibernate\Model\Officer.cs" />
     <Compile Include="NHibernate\Model\Balance.cs" />
@@ -86,12 +84,6 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="NHibernate\Hibernate.cfg.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Folder Include="NHibernate\NHConfig\" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="NHibernate\NHConfig\Persona.hbm.xml" />
     <EmbeddedResource Include="NHibernate\NHConfig\TipoDocumento.hbm.xml" />
     <EmbeddedResource Include="NHibernate\NHConfig\AsientoContable.hbm.xml" />
@@ -103,11 +95,9 @@
     <EmbeddedResource Include="NHibernate\NHConfig\TipoCuenta.hbm.xml" />
     <EmbeddedResource Include="NHibernate\NHConfig\CuentaContable.hbm.xml" />
     <EmbeddedResource Include="NHibernate\NHConfig\MovimientoDiario.hbm.xml" />
+    <Content Include="NHibernate\Hibernate.cfg.xml" />
     <Content Include="ScriptBaseDeDatos\ComandoRadioElectrico.sql" />
     <Content Include="ScriptBaseDeDatos\InsertarDatosComandoRadioElectrico.sql" />
-    <Content Include="NHibernate\Hibernate.cfg.xml">
-      <SubType>Designer</SubType>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
