--- a/ComandoRadioElectrico/packages/repositories.config
+++ b/ComandoRadioElectrico/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ComandoRadioElectrico.Core\packages.config" />
   <repository path="..\ComandoRadioElectrico.Core1\packages.config" />
 </repositories>
