Agrego pantallas y Modifico errore en las clases del tipo .nhm.xml

--- a/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
@@ -52,6 +52,30 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\PantallaCobradores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PantallaCobradores.designer.cs">
+      <DependentUpon>PantallaCobradores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PantallaCuentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PantallaCuentas.designer.cs">
+      <DependentUpon>PantallaCuentas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PantallaPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PantallaPrincipal.designer.cs">
+      <DependentUpon>PantallaPrincipal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PantallaSocios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PantallaSocios.designer.cs">
+      <DependentUpon>PantallaSocios.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -64,6 +88,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\PantallaCobradores.resx">
+      <DependentUpon>PantallaCobradores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\PantallaCuentas.resx">
+      <DependentUpon>PantallaCuentas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\PantallaPrincipal.resx">
+      <DependentUpon>PantallaPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\PantallaSocios.resx">
+      <DependentUpon>PantallaSocios.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
