--- a/ComandoRadioElectrico/ComandoRadioElectrico.Core/ComandoRadioElectrico.Core.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.Core/ComandoRadioElectrico.Core.csproj
@@ -40,6 +40,15 @@
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity">
+      <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.4.0.3.4000\lib\net40\NHibernate.dll</HintPath>
     </Reference>
@@ -57,6 +66,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NHibernate\Model\Partner.cs" />
+    <Compile Include="ImplementationsContainer.cs" />
+    <Compile Include="Services\Business\Implementation\BaseService.cs" />
     <Compile Include="Utils\AutoMapperConfig.cs" />
     <Compile Include="NH.cs" />
     <Compile Include="NHibernate\Model\MoveType.cs" />
