--- a/ComandoRadioElectrico/ComandoRadioElectrico.Core/packages.config
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.Core/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net40-Client" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.0.3.4000" targetFramework="net45" />
+  <package id="Unity" version="2.1.505.2" targetFramework="net40-Client" />
 </packages>
