--- a/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
@@ -44,7 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Facade\PersonService.cs" />
+    <Compile Include="Adapter\OfficerComboBoxAdapter.cs" />
+    <Compile Include="Adapter\PartnerGridViewAdapter.cs" />
+    <Compile Include="Facade\DocumentTypeService.cs" />
+    <Compile Include="Facade\OfficerService.cs" />
+    <Compile Include="Facade\PartnerService.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
