--- a/ComandoRadioElectrico/ComandoRadioElectrico.Core/ComandoRadioElectrico.Core.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.Core/ComandoRadioElectrico.Core.csproj
@@ -69,22 +69,30 @@
   <ItemGroup>
     <Compile Include="BaseService.cs" />
     <Compile Include="DAO\AccountantAccountDAO.cs" />
+    <Compile Include="DAO\GeneratedPeriodDAO.cs" />
     <Compile Include="DAO\AccountTypeDAO.cs" />
     <Compile Include="DAO\DAOBase\DAOBase.cs" />
     <Compile Include="DAO\DAOBase\IDAOBase.cs" />
+    <Compile Include="DAO\IGeneratedPeriodDAO.cs" />
+    <Compile Include="DAO\QuotaDAO.cs" />
     <Compile Include="DAO\IAccountantAccountDAO.cs" />
+    <Compile Include="DAO\IQuotaDAO.cs" />
     <Compile Include="DAO\IAccountTypeDAO.cs" />
     <Compile Include="DTO\AccountTypeDTO.cs" />
     <Compile Include="DTO\DocumentTypeDTO.cs" />
     <Compile Include="DTO\AccountantAccountDTO.cs" />
+    <Compile Include="DTO\QuotaDTO.cs" />
     <Compile Include="DTO\PersonDTO.cs" />
     <Compile Include="Exceptions\BusinessException.cs" />
     <Compile Include="Exceptions\DataBaseException.cs" />
     <Compile Include="NHibernate\Model\Partner.cs" />
     <Compile Include="CoreServerModuleImpl.cs" />
+    <Compile Include="NHibernate\Model\GeneratedPeriod.cs" />
     <Compile Include="Services\Implementations\AccountantAccountService.cs" />
+    <Compile Include="Services\Implementations\QuotaService.cs" />
     <Compile Include="Services\Implementations\AccountTypeService.cs" />
     <Compile Include="Services\Interfaces\IAccountantAccountService.cs" />
+    <Compile Include="Services\Interfaces\IQuotaService.cs" />
     <Compile Include="Services\Interfaces\IAccountTypeService.cs" />
     <Compile Include="Utils\MappingHelper.cs" />
     <Compile Include="NHibernate\Model\MoveType.cs" />
@@ -100,6 +108,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\DeletedEntityDTO.cs" />
     <Compile Include="DTO\PartnerDTO.cs" />
+    <Compile Include="Utils\MonthPeriod.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -118,6 +127,7 @@
     <EmbeddedResource Include="NHibernate\NHConfig\CuentaContable.hbm.xml" />
     <EmbeddedResource Include="NHibernate\NHConfig\MovimientoDiario.hbm.xml" />
     <Content Include="NHibernate\Hibernate.cfg.xml" />
+    <EmbeddedResource Include="NHibernate\NHConfig\PeriodoGenerado.hbm.xml" />
     <Content Include="ScriptBaseDeDatos\ComandoRadioElectrico.sql" />
     <Content Include="ScriptBaseDeDatos\InsertarDatosComandoRadioElectrico.sql" />
   </ItemGroup>
