--- a/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapter\CollectDayComboBoxAdapter.cs" />
     <Compile Include="Adapter\OfficerComboBoxAdapter.cs" />
     <Compile Include="Adapter\PartnerGridViewAdapter.cs" />
     <Compile Include="Facade\AccountantAccountFacade.cs" />
