--- a/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapter\OfficerComboBoxAdapter.cs" />
+    <Compile Include="Adapter\OfficerGridViewAdapter.cs" />
     <Compile Include="Adapter\PartnerGridViewAdapter.cs" />
     <Compile Include="Facade\AccountantAccountFacade.cs" />
     <Compile Include="Facade\AccountTypeFacade.cs" />
