--- a/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
+++ b/ComandoRadioElectrico/ComandoRadioElectrico.WinForms/ComandoRadioElectrico.WinForms.csproj
@@ -63,6 +63,24 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Miscellaneous.cs" />
+    <Compile Include="Views\CierreCaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\CierreCaja.Designer.cs">
+      <DependentUpon>CierreCaja.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GenerarBalance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\GenerarBalance.Designer.cs">
+      <DependentUpon>GenerarBalance.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GenerarCuotas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\GenerarCuotas.Designer.cs">
+      <DependentUpon>GenerarCuotas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\PantallaCobradores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +115,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\CierreCaja.resx">
+      <DependentUpon>CierreCaja.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\GenerarBalance.resx">
+      <DependentUpon>GenerarBalance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\GenerarCuotas.resx">
+      <DependentUpon>GenerarCuotas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\PantallaCobradores.resx">
       <DependentUpon>PantallaCobradores.cs</DependentUpon>
     </EmbeddedResource>
